* added useNewCaseMgmt switch for Community issues.  This fix repairs the new eChart CME view.  NOTE, this new interface does NOT use community issues.